fix heigth thumb on mobile

--- a/src/assets/scss/components/button.scss
+++ b/src/assets/scss/components/button.scss
@@ -12,5 +12,8 @@
     }
   &__icon{
       margin-left: 8px;
+    @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
+      margin-top: 5px;
+    }
   }
 }
