--- a/src/assets/scss/components/heroBanner.scss
+++ b/src/assets/scss/components/heroBanner.scss
@@ -2,4 +2,7 @@
   width: 100%;
   height: 35vw;
   border-radius: 10px;
+  @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
+    height: 200px;
+  }
 }
