--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -33,6 +33,8 @@
             'title banner'
             'button banner'
             'thumbs banner';
+    padding-top: 17px;
+    padding-bottom: 49px;
     @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
       grid-template-columns: 100%;
       grid-template-areas:
@@ -40,6 +42,7 @@
             'button'
             'banner'
             'thumbs';
+      padding-bottom: 35px;
     }
 
     &__grid-title{
@@ -56,6 +59,9 @@
 
     &__grid-banner{
       grid-area: banner;
+      @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
+        margin: 15px 0;
+      }
     }
 
     &__grid-title, &__grid-thumbs{
@@ -65,14 +71,6 @@
       }
     }
 
-    padding-top: 17px;
-    padding-bottom: 49px;
-      &__left{
-        padding-right: 8rem;
-          &__link{
-            text-decoration: none;
-          }
-      }
       &__thumbs{
         display: flex;
         margin: auto 0;
@@ -83,14 +81,20 @@
             cursor: pointer;
             border: 3px solid transparent;
             @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
-              margin-right:0;
+              margin: 0 2px;
+              height: 45px;
             }
               img{
                 width: 100%;
                 height: 100%;
+                border-radius: 2px;
               }
             &.active{
               border: 3px solid $default-white;
+              border-radius: 2px;
+              img{
+                border-radius: 0;
+              }
             }
           }
 
@@ -99,7 +103,7 @@
       border-radius: 50px;
       font-weight: 600;
       font-size: 15px;
-      margin-top: 30px;
+      margin-top: 28px;
       margin-bottom: 20px;
     }
   }
